# z3-app

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  dev.db  diesel.toml  package-lock.json  package.json  start-database.sh
migrations/2025-06-29-131739_create_posts/: up.sql
migrations/2025-06-29-135318_create_posts/: up.sql
migrations/2025-06-29-141131_create_posts/: down.sql  up.sql
migrations/2025-06-30-075224_users/: down.sql  up.sql
migrations/2025-06-30-080110_users/: down.sql  up.sql
migrations/2025-06-30-112810_final/: down.sql  up.sql
src/: lib.rs  main.rs
src/db/: db_utils.rs  mod.rs  models.rs  schema.rs
src/db/models/: accounts.rs  mod.rs  posts.rs  users.rs
src/templates/: main.rs  mod.rs  templates_defs.rs  test.rs
templates/: test.html
templates/html/: main.html
templates/html/_components/: error_message.html  login_form.html  post.html  redirect.html  signup_form.html  signup_success.html  user_header.html  welcome.html
