[package]
name = "cosy-list"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
diesel = { version = "2.2.11", features = ["sqlite", "r2d2"] }
libsql = { version = "0.9.11", features = ["remote"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
once_cell = "1.21.3"
askama = "0.14.0"
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
