[package]
name = "z3-app"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
diesel = { version = "2.2.11", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
once_cell = "1.21.3"
askama = "0.14.0"
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum-login = "0.17.0"
password-auth = "1.0.0"
async-trait = "0.1.88"
thiserror = "2.0.12"
r2d2 = "0.8.10"
